--- a/switchManagerAPI/pyproject.toml
+++ b/switchManagerAPI/pyproject.toml
@@ -12,7 +12,7 @@ uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
 
 [tool.poetry.scripts]
-start = "switchmanagerapi.main:app - reload"
+start = "switchmanagerapi.main:main"
 
 [build-system]
 requires = ["poetry-core"]
