--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ theme:
   name: material
 nav:
   - 'Main': 'index.md'
-  - 'Architecture': 'architecure/index.md'
+  - 'Architecture': 'architecture/index.md'
   - 'Data Sync': 'backend/datasync.md'
 plugins:
   - search
