--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
