--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.22"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
+aiosqlite = "^0.19.0"
 
 [tool.poetry.scripts]
 start = "switchmanagerapi.main:main"
