--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = "^0.103.2"
 uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
 sqlalchemy = "^2.0.22"
-psycopg2-binary = "^2.9.9"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
