--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.13",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.19.3",
     "tailwindcss": "^3.3.3"
   }
 }
