--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@vitejs/plugin-react": "^4.2.0",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
@@ -17,37 +18,30 @@
     "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
+    "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "REACT_APP_API_URL=http://0.0.0.0:8000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "REACT_APP_API_URL=http://0.0.0.0:8000 vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage .",
+    "test:debug": "jest --inspect-brk --runInBand --no-cache"
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.19.3",
-    "tailwindcss": "^3.3.5"
+    "autoprefixer": "^10.4.16",
+    "browserslist-to-esbuild": "^1.2.0",
+    "eslint": "^8.54.0",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
