--- a/front/switch-manager-react/tsconfig.json
+++ b/front/switch-manager-react/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,7 +21,9 @@
       "@/*": ["./*"],
       "@components/*": ["./components/*"],
       "@routes/*": ["./routes/*"],
-      "@api/*": ["./api/*"]
+      "@api/*": ["./api/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@icons/*": ["./icons/*"]
     }
   },
   "include": ["src"]
