--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
 sqlalchemy = "^2.0.22"
 asyncpg = "^0.29.0"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
