--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -12,10 +12,12 @@
     "@types/react-dom": "^18.2.13",
     "@vitejs/plugin-react": "^4.2.0",
     "clsx": "^2.0.0",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
