--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^2.4.2"
 sqlalchemy = "^2.0.22"
 asyncpg = "^0.29.0"
 loguru = "^0.7.2"
+pyhpeimc = "^1.0.49"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
