--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.22"
 asyncpg = "^0.29.0"
 loguru = "^0.7.2"
 pyhpeimc = "^1.0.49"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
