--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -15,6 +15,7 @@ asyncpg = "^0.29.0"
 loguru = "^0.7.2"
 pyhpeimc = "^1.0.49"
 pyyaml = "^6.0.1"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
