--- a/backend/syncModule/pyproject.toml
+++ b/backend/syncModule/pyproject.toml
@@ -16,3 +16,6 @@ pyyaml = "^6.0.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = "syncmodule.main:main"
