--- a/backend/switchManagerAPI/exemple_config.yaml
+++ b/backend/switchManagerAPI/exemple_config.yaml
@@ -11,7 +11,7 @@ db: &db
   user: db_user
   password: db_password
   host: "0.0.0.0"
-  port: "5432"
+  port: 5432
   database: db_name
 
 # syncModule config
@@ -25,7 +25,7 @@ sync:
     user: source_db_user
     password: source_db_pass
     host: "0.0.0.0"
-    port: "1522"
+    port: 1521
     database: source_db_name
     table: source_table_name
   destination:
