--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "iso-639-1": "^3.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
