--- a/front/switch-manager-react/package.json
+++ b/front/switch-manager-react/package.json
@@ -13,18 +13,19 @@
     "@types/react-dom": "^18.2.13",
     "@vitejs/plugin-react": "^4.2.0",
     "clsx": "^2.0.0",
-    "i18next": "^23.7.6",
+    "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "iso-639-1": "^3.1.0",
     "react": "^18.2.0",
-    "react-datepicker": "^4.21.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
     "react-i18next": "^13.5.0",
     "react-query": "^4.0.0",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
+    "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
     "vite": "^5.0.5",
     "vite-tsconfig-paths": "^4.2.1",
