--- a/backend/switchManagerAPI/pyproject.toml
+++ b/backend/switchManagerAPI/pyproject.toml
@@ -16,6 +16,7 @@ loguru = "^0.7.2"
 pyhpeimc = "^1.0.49"
 pyyaml = "^6.0.1"
 psycopg2 = "^2.9.9"
+docker = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 faker = "^19.11.0"
